# QQListener

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  setting.json
.github/workflows/: build.yml
scripts/: build_app.py  pyinstaller_runtime_hook.py
src/core/: app.py  autostart.py  logging.py  notification_engines.py  notification_state.py  resources.py  settings.py  signals.py  worker.py
src/ui/: __init__.py  fluent_compat.py  fluent_dialog.py  notify_manager.py  notify_window.py  qt_compat.py  settings_window.py  status_ball.py  tray_icon.py
src/utils/: filtered_print.py  message_processor.py  tts.py
translations/: en-US.ts  ja-JP.ts
