[project]
name = "qqlistener"
version = "0.1.0"
description = "QQ通知监控软件"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "edge-tts>=7.2.7",
    "loguru>=0.7.2",
    "psutil>=7.2.2",
    "pygame>=2.6.1",
    "pyside6>=6.7.0",
    "pyside6-fluent-widgets>=1.8.7",
    "pycaw>=20240210; sys_platform == 'win32'",
    "uiautomation>=2.0.29; sys_platform == 'win32'",
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
]

[project.optional-dependencies]
winsdk = [
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
]
uia = [
    "uiautomation>=2.0.29; sys_platform == 'win32'",
]
windows = [
    "pycaw>=20240210; sys_platform == 'win32'",
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
    "uiautomation>=2.0.29; sys_platform == 'win32'",
]
system-tts = [
    "pyttsx3>=2.99",
]
win32 = [
    "pywin32>=311; sys_platform == 'win32'",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["src"]
